# digital_rf

./: .appveyor.yml  .authors.yml  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  CHANGES  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  README.rst  RELEASES  RELEASING.rst  bibtex.bib  conda-forge.yml  drf_cross_sti.py  pyproject.toml  rever.xsh  setup.py.in
.ci/: build.sh  pypi_upload.sh  travis_setup.sh
.ci_support/: linux_64_numpy1.17python3.6.____cpython.yaml  linux_64_numpy1.17python3.7.____cpython.yaml  linux_64_numpy1.17python3.8.____cpython.yaml  linux_64_numpy1.19python3.9.____cpython.yaml  linux_64_numpy1.22python3.10.____cpython.yaml  linux_64_numpy1.22python3.8.____cpython.yaml  linux_64_numpy1.22python3.9.____cpython.yaml  linux_64_numpy1.23python3.11.____cpython.yaml  linux_64_numpy1.26python3.12.____cpython.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  (+75 more)
.scripts/: build_steps.sh  (+3 more)
c/: CMakeLists.txt
c/cmake/: libdigital_rfConfig.cmake
c/examples/: CMakeLists.txt  benchmark_rf_write_hdf5.c  example_rf_write_hdf5.c  example_with_sigint_handler.c
c/include/: digital_rf.h  digital_rf_version.h  digital_rf_version.h.in
c/include/windows/: wincompat.h
c/lib/: rf_write_hdf5.c
c/lib/pkgconfig/: digital_rf.pc.in
c/tests/: CMakeLists.txt  test_rf_write_hdf5.c  test_rf_write_hdf5_simple.c
examples/: CMakeLists.txt  example1.py  example_read_digital_metadata.py  example_read_digital_rf.py  example_write_digital_metadata.py  example_write_digital_rf.py
examples/beacon/: beacon_analysis.py  beacon_batch_analysis.py  beacon_record.py
examples/beacon/config/: site.ini
examples/prc_radar/waveforms/: create_waveform.py
examples/sounder/: README.txt  prc_analyze.py  tx.py
examples/sounder/waveforms/: create_waveform.py
examples/src/: benchmark_rf_write_hdf5.c  example_rf_write_hdf5.c  example_with_sigint_handler.c
gnuradio/: AUTHORS  CMakeLists.txt  MANIFEST.in  MANIFEST.md  gnuradio.project  setup.py
gnuradio/apps/: CMakeLists.txt  thor.py  thorc.py
gnuradio/cmake/Modules/: GrPython.cmake  GrSwig.cmake  grdrfConfig.cmake
gnuradio/docs/: README.drf
gnuradio/docs/doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile.swig_doc.in
gnuradio/docs/doxygen/other/: group_defs.dox  main_page.dox
gnuradio/grc/: CMakeLists.txt  drf_digital_rf_sink.xml  gen_gr_digital_rf_digital_rf_sink.py  gen_gr_digital_rf_digital_rf_source.py  gen_gr_drf_digital_rf_sink.py  gen_gr_drf_digital_rf_source.py  gr_digital_rf_digital_rf_channel_sink.xml  gr_digital_rf_digital_rf_channel_source.xml  gr_drf_digital_rf_channel_sink.xml  gr_drf_digital_rf_channel_source.xml
gnuradio/include/gr_drf/: CMakeLists.txt  api.h  digital_rf_sink.h
gnuradio/lib/: CMakeLists.txt  digital_rf_sink_impl.cc  digital_rf_sink_impl.h  qa_drf.cc  qa_drf.h  test_drf.cc
gnuradio/python/: CMakeLists.txt  __init__.py  digital_rf_sink.py  digital_rf_source.py
gnuradio/swig/: CMakeLists.txt  drf_swig.i
matlab/: CMakeLists.txt  DigitalMetadataReader.m  DigitalRFReader.m  benchmarkDigitalRFReader.m  benchmark_driver.m  digital_rf.prj.in  drf_channel.m  recursive_disp_map.m  testDigitalMetadataReader.m  testDigitalRFReader.m
matlab/digital_rf_toolbox/: DigitalMetadataReader.m  DigitalRFReader.m  STIPlot.m  benchmarkDigitalRFReader.m  benchmark_driver.m  drf_channel.m  glob.m  recursive_disp_map.m  testDigitalMetadataReader.m  testDigitalRFReader.m  test_STIPlot.m
python/: .gitattributes  CMakeLists.txt  MANIFEST.in  README.rst  __init__.py  _version.py  _version.py.in  dev_requirements.txt  digital_metadata.py  digital_rf_deprecated_hdf5.py  digital_rf_hdf5.py  drf_command.py  include  list_drf.py  mirror.py  pyproject.toml  ringbuffer.py  setup.cfg  setup.py  setup.py.in  util.py  watchdog_drf.py
python/digital_rf/: __init__.py  _version.py  digital_metadata.py  digital_rf_deprecated_hdf5.py  digital_rf_hdf5.py  drf_command.py  list_drf.py  mirror.py  ringbuffer.py  util.py  watchdog_drf.py
python/examples/: benchmark_rf_read_hdf5.py  benchmark_rf_write_hdf5.py  example1.py  example_read_digital_metadata.py  example_read_digital_rf.py  example_write_digital_metadata.py  example_write_digital_rf.py
python/examples/beacon/: beacon_analysis.py  beacon_record.py
python/examples/beacon/config/: beacons.ini
python/examples/sounder/: README.txt  prc_analyze.py  tx.py
python/examples/sounder/waveforms/: create_waveform.py
python/gr_digital_rf/: __init__.py  _version.py  _version.py.in  digital_rf_sink.py  digital_rf_source.py  raster.py  vector.py
python/grc/: gen_gr_digital_rf_digital_rf_sourcesink.py  gr_digital_rf.tree.yml  gr_digital_rf_digital_rf_channel_sink.block.yml  gr_digital_rf_digital_rf_channel_sink.xml  gr_digital_rf_digital_rf_channel_source.block.yml  gr_digital_rf_digital_rf_channel_source.xml  gr_digital_rf_digital_rf_sink.block.yml.tmpl  gr_digital_rf_digital_rf_sink.xml.tmpl  gr_digital_rf_digital_rf_source.block.yml.tmpl  gr_digital_rf_digital_rf_source.xml.tmpl  gr_digital_rf_raster_aggregate.block.yml  gr_digital_rf_raster_aggregate.xml  gr_digital_rf_raster_chunk.block.yml  gr_digital_rf_raster_chunk.xml  gr_digital_rf_raster_select.block.yml  gr_digital_rf_raster_select.xml  gr_digital_rf_raster_tag.block.yml  gr_digital_rf_raster_tag.xml  gr_digital_rf_vector_aggregate.block.yml  gr_digital_rf_vector_aggregate.xml
python/lib/: py_rf_write_hdf5.c  rf_write_hdf5.c
python/tests/: conftest.py  regression_test_digital_rf_hdf5.py  test_digital_rf_hdf5.py  test_util.py
python/tools/: digital_metadata_archive.py  digital_rf_archive.py  digital_rf_upconvert.py  digital_rf_update_properties.py  drf_cross_sti.py  drf_plot.py  drf_sound.py  drf_sti.py  thor.py  thor_zmq.py  thorosmo.py  thorpluto.py  uhdtodrf.py  verify_digital_rf_upconvert.py
tests/: CMakeLists.txt  benchmark_rf_read_hdf5.py  benchmark_rf_write_hdf5.py  regression_test_digital_rf_hdf5.py  test_digital_rf_hdf5.py
tests/src/: test_rf_write_hdf5.c  test_rf_write_hdf5_simple.c
(+123 files in other folders)
